comesa-tests/comesa-test-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comesa-test-runner
  namespace: ${app.namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comesa-test-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: comesa-test-runner
        app: comesa-test-runner
        sidecar.istio.io/inject: 'false'
    spec:
      volumes:
        - name: comesa-tests-config-vol
          configMap:
            name: comesa-tests-config
        - name: comesa-tests-ttk-environments-vol
          configMap:
            name: ttk-backend-config-extra-environments
        - name: reports-storage
          persistentVolumeClaim:
            claimName: comesa-test-reports-pvc
      containers:
        - name: test-runner
          image: ghcr.io/infitx-org/comesa-tests:latest
          command:
            - npm
            - start
          volumeMounts:
            - name: comesa-tests-config-vol
              mountPath: /opt/app/config
            - name: comesa-tests-ttk-environments-vol
              mountPath: /opt/app/ttk-environments
            - name: reports-storage
              mountPath: /opt/app/reports
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: comesa-test-runner
  namespace: ${app.namespace}
spec:
  selector:
    app: comesa-test-runner
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
