comesa-tests/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ttk-vs
  namespace: comesa-tests
spec:
  gateways:
    - istio-ingress-int/internal-wildcard-gateway
  hosts:
    - ttk-comesa-tests.int.${cluster.env}.${cluster.domain}
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: ttk-backend
            port:
              number: 5050
    - match:
        - uri:
            prefix: /socket.io
      route:
        - destination:
            host: ttk-backend
            port:
              number: 5050
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ttk-frontend
            port:
              number: 6060
